- rpm-4.12 support:
  o rename 'no_suggests' parameter as 'no_recommends'
  o rename '--no-suggests' option as '--no-recommends'

Version 7.32 - 5 September 2014

- add some missing methods, allows to do urpmf --qf '%sourcerpm:%requires'
- bump split-length from 8 to 50
  improves installing gnome in a chroot from 14m to 11m
- update bash completion
- gurpmi:
  o fix crashing when choosing to save file
  o fix segfaulting when managing exceptions
  o report crashes through drakbug
- fix some warnings with perl 5.20

Version 7.31 - 24 January 2014

- do not exec pkexec but run it so it has a parent process to fix double fork
  issues mga#11184 mga#12364
- gurpmi:
  o fix garbaged UTF-8 in file name arguments (mga#12407)

Version 7.30 - 5 December 2013

- convert from gtk2 to gtk3

Version 7.29 - 3 December 2013

- use /proc/self/mountinfo for ro filesystem checks mga#11319
- polkit: only use pkexec when not already root

Version 7.28 - 5 November 2013

- library:
  o fix parsing download progress with rsync >= 3.10
- urpmi:
  o add support for --deploops option (needs URPM-4.29+)

Version 7.27.5 - 13 October 2013, by Colin Guthrie

- use polkit for authorisation (mga#11125)

Version 7.27.4 - 4 October 2013, by Thierry Vignaud

- library:
  o adapt to perl-5.18
  o prevent disabling removing orphan if we failed to detect running kernel
    version

Version 7.27.3 - 30 May 2013, by Thierry Vignaud

- library:
  o revert fix for mga#10254 in previous release
    (the bug was in media.cfg, mga#10335)

Version 7.27.2 - 24 May 2013, by Thierry Vignaud

- library:
  o ensure priority updates are installed in a single transaction
  o fix wrongly enabling backports/testing for tainted/nonfree when
    such packages are already installed (mga#10254)

Version 7.27.1 - 17 May 2013, by Thierry Vignaud

- library:
  o really auto enable tainted media if needed when adding distrib media

Version 7.27 - 17 May 2013, by Thierry Vignaud

- gurpmi2: