@@ -118,9 +118,12 @@ my %options_spec = (
 	justdb => \$options{justdb},
 	replacepkgs => \$options{replacepkgs},
 	suggests => sub { 
-	    $urpm->{fatal}(1, "Use --allow-suggests instead of --suggests");
+	    $urpm->{fatal}(1, "Use --allow-recommends instead of --suggests");
 	},
-	'allow-suggests' => sub { $urpm->{options}{'no-recommends'} = 0 },
+	'allow-suggests' => sub {
+	    warn "WARNING: --allow-suggests is deprecated. Use --allow-recommends instead\n";
+	    $urpm->{options}{'no-recommends'} = 0 },
+	'allow-recommends' => sub { $urpm->{options}{'no-recommends'} = 0 },
 	'no-recommends' => sub { $urpm->{options}{'no-recommends'} = 1 },
 	'no-suggests' => sub { # COMPAT
 	    warn "WARNING: --no-suggests is deprecated. Use --no-recommends instead\n";
@@ -422,7 +425,7 @@ foreach my $k ("test!", "force", "root=s", "use-distrib=s", 'env=s',
 {
     $options_spec{urpme}{$k} = $options_spec{urpmi}{$k};
 }
-foreach my $k ("root=s", "nolock", "use-distrib=s", "skip=s", "prefer=s", "synthesis=s", 'no-recommends', 'no-suggests', 'allow-suggests', 'auto-orphans')
+foreach my $k ("root=s", "nolock", "use-distrib=s", "skip=s", "prefer=s", "synthesis=s", 'no-recommends', 'no-suggests', 'allow-recommends', 'allow-suggests', 'auto-orphans')
 {
     $options_spec{urpmq}{$k} = $options_spec{urpmi}{$k};
 }
