@@ -102,7 +102,7 @@ sub usage () {
                    dependencies checking.
 ") . N("  --allow-force  - allow asking user to install packages without
                    dependencies checking and integrity.
-") . N("  --allow-suggests - auto select \"suggested\" packages.
+") . N("  --allow-recommends - auto select \"recommended\" packages.
 ") . N("  --parallel     - distributed urpmi across machines of alias.
 ") . N("  --root         - use another root for rpm installation.
 ") . N("  --urpmi-root   - use another root for urpmi db & rpm installation.
