@@ -1,5 +1,6 @@
 - rpm-4.12 support:
   o rename 'no_suggests' parameter as 'no_recommends'
+  o rename '--allow-suggests' option as '--allow-recommends'
   o rename '--no-suggests' option as '--no-recommends'
 
 Version 7.32 - 5 September 2014
